--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,60 @@
-.app{
-    background-color: green;
+:root {
+  --main-text-color: brown;
+}
+
+*, ::before, ::after {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+  }
+  
+  html {
+    font-size: 10px;
+  }
+  
+  body{
+    font-family: 'Barlow', sans-serif;
+    font-size: 1.8rem;
+    font-weight: 400;
+    line-height: 1;
+  }
+  
+  .app {
+    height: 100vh;
+  }
+  
+  a{
+    text-decoration: none;
+  }
+  
+  a, a:hover {
+    -webkit-transition: all .4s ease-in-out;
+    -moz-transition: all .4s ease-in-out;
+    transition: all .4s ease-in-out;
+  }
+
+  ul{
+    list-style: none;
+  }
+
+  .container {
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.row {
+    margin: 4em 20px;
+}
+
+.overlay::before {    
+    z-index: 1;
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: linear-gradient(180deg, transparent 0%, transparent 18%, rgba(0,0,0,0.8) 99%, rgba(0,0,0,0.8) 100%)
 }
