--- a/src/components/Heart/heart.css
+++ b/src/components/Heart/heart.css
@@ -1,11 +1,12 @@
 .heart{
     position:relative;
     width:100%;
-    display:inline-block;
+    height:100%;
 }
 
 .heart__icon{
     width:100%;
+    height:100%;
 }
 
 .heart__number{
@@ -15,4 +16,5 @@
     transform: translate(-50%, -50%);
     font-weight: 700;
     color:#fff;
+    font-size:16px;
 }
