--- a/src/components/SneakPeek/sneakPeek.css
+++ b/src/components/SneakPeek/sneakPeek.css
@@ -1,7 +1,8 @@
 .sneak-peek{
-    width:100%;
-    max-width:335px;
-  
+    margin: 15px;
+    width: 100%;
+    max-width: 260px;
+    font-size: 10px;
     padding:10px;
     border-radius: 5px;
     -webkit-box-shadow: 1px 1px 5px 1px #dadada; 
@@ -9,7 +10,7 @@
     display:flex;
     flex-direction: column;
     position:relative;
-    height:100%;
+    min-height:100%;
 }
 
 .sneak-peek__post-liked{
@@ -20,7 +21,23 @@ right:-15px;
 
 .sneak-peek__title{
     text-align: center;
-    margin-bottom:30px;
+    font-size:2.1em;
+    margin-bottom:20px;
+}
+
+.sneak-peek__link{
+    text-align: center;
+    margin-bottom:13px;
+    font-size:1.5em;
+    color: rgb(14, 111, 221);
+    display:block;
+    width:100%;
+    font-size:1.5em;
+    
+}
+
+.sneak-peek__link:hover{
+   text-decoration: underline; 
 }
 
 .sneak-peek__img{
@@ -32,6 +49,7 @@ right:-15px;
    display:flex;
    justify-content: center;
    align-items: center;
+   flex-wrap: wrap;
 }
 
 .sneak-peek__stat{
@@ -39,8 +57,24 @@ right:-15px;
     display:flex;
     justify-content: center;
     align-items: center;
+    font-size:1.5em;
 }
 
 .sneak-peek__stat:last-of-type{
     margin-left:10px;
 }
+
+
+.sneak-peek__icon{
+    width:25px;
+}
+
+.sneak-peek__icon-container{
+    margin-left:5px;
+    width:27px;
+}
+
+.sneak-peek__label{
+    /* color: rgb(14, 111, 221) */
+}
+
