--- a/src/components/DynamicIcon/dynamicIcon.css
+++ b/src/components/DynamicIcon/dynamicIcon.css
@@ -1,15 +1,15 @@
-.heart{
+.dynamic-icon{
     position:relative;
     width:100%;
     height:100%;
 }
 
-.heart__icon{
+.dynamic-icon__img{
     width:100%;
     height:100%;
 }
 
-.heart__number{
+.dynamic-icon__number{
     position:absolute;
     left:50%;
     top:45%;
