--- a/src/components/Comment/comment.css
+++ b/src/components/Comment/comment.css
@@ -26,15 +26,28 @@
     color: rgb(61, 61, 61);
 }
 
-.comment__options-container{
+.comment__options{
     display:flex;
 align-items: center;
 margin-top:20px;
 height:30px;
 }
 
-.comment__like-label{
+.comment__option{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    margin-left:5px;
+}
+
+.comment__option-label{
     color: rgb(14, 111, 221)
+}
+
+.comment__option-icon{
+    width:22px;
+    margin-left:5px;
 }
 
 .comment__like-icon{
@@ -42,34 +55,8 @@ height:30px;
     margin-left:5px;
 }
 
-.comment__post-container, .comment__trash-container{
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-}
-
-.comment__trash-container{
-    margin-left:20px;
-}
-
-.comment__post-icon, .comment__trash-icon{
-    width:25px;
-}
-
-.comment__trash-icon-container, .comment__post-icon-container{
-    margin-left:5px;
-}
-
-.comment__trash-label, .comment__post-label{
-    color: rgb(14, 111, 221)
-}
-
-.comment__post-container:hover .comment__post-label{
+.comment__option:hover .comment__option-label{
     text-decoration: underline;
 }
 
-.comment__trash-container:hover .comment__trash-label{
-    text-decoration: underline;
-}
 
