--- a/src/pages/Favorites/favorites.css
+++ b/src/pages/Favorites/favorites.css
@@ -1,12 +1,26 @@
+.favorites{}
+
+
 .favorites__header{
-    margin-top: 50px;
+    padding-top:10px;
     margin-bottom: 30px;
     text-align: center;
 }
+
+
+
 
 .favorites__search-bar-container{
     display:flex;
     margin-bottom:40px;
     justify-content: center;
+}
+
+.favorites__line{
+    height:1px;
+    width:90%;
+    margin: 20px auto;
+    background-color:rgb(206, 206, 206);
+    border-radius: 10px;
 }
 
