--- a/src/components/SneakPeek/sneakPeek.css
+++ b/src/components/SneakPeek/sneakPeek.css
@@ -13,8 +13,6 @@
     min-height:100%;
 }
 
-
-
 .sneak-peek__title{
     text-align: center;
     font-size:2.1em;
@@ -49,7 +47,6 @@
 }
 
 .sneak-peek__stat{
-    height:30px;
     display:flex;
     justify-content: center;
     align-items: center;
@@ -61,14 +58,16 @@
 }
 
 
-.sneak-peek__icon{
-    width:25px;
-}
-
 .sneak-peek__icon--attached{
-    width:40px;
+    width:auto;
     position:absolute;
-    top:-15px;
-    right:-15px;
+    right:-5px;
+    top:-20px;
+    font-size:14px;
+    background-color: white;
+    border-radius:5px;
+    -webkit-box-shadow: 1px 1px 5px 1px #dadada; 
+    box-shadow: 1px 1px 5px 1px #cccccc;
+    padding:5px;
 }
 
