--- a/src/components/DynamicIcon/dynamicIcon.css
+++ b/src/components/DynamicIcon/dynamicIcon.css
@@ -10,6 +10,10 @@
     cursor: pointer;
 }
 
+.dynamic-icon__link--white{
+    color: rgb(255, 255, 255);
+}
+
 .dynamic-icon--link:hover{
     text-decoration: underline;
 }
