--- a/src/components/SearchBar/searchBar.css
+++ b/src/components/SearchBar/searchBar.css
@@ -4,14 +4,19 @@
    width:100%;
    max-width:350px;
    -webkit-box-shadow: 1px 1px 5px 1px #d4d4d4; 
-    box-shadow: 1px 1px 5px 1px #d4d4d4;
+   box-shadow: 1px 1px 5px 1px #d4d4d4;
     border-radius:5px;
     transition: .5s;
 }
 
+.search-bar--nav{
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
+
 
 .search-bar--small{
-    max-width: 250px;
+    max-width: 250px; 
 }
 
 .search-bar__input{
@@ -22,13 +27,18 @@
     border-radius:5px;   
 }
 
-
-
-
 .search-bar__input:focus{
-    -webkit-box-shadow: 1px 1px 5px 1px #8a8a8a; 
-    box-shadow: 1px 1px 5px 1px #8a8a8a;
+    -webkit-box-shadow: 1px 1px 5px 1px #b4b4b4; 
+    box-shadow: 1px 1px 5px 1px #b4b4b4; 
 }
+
+.search-bar__input--nav:focus{
+    -webkit-box-shadow: 1px 1px 5px 1px rgb(140, 193, 253);
+    box-shadow: 1px 1px 5px 1px  rgb(140, 193, 253);
+   
+}
+
+
 
 .search-bar__search-icon{
     position: absolute;
@@ -52,7 +62,8 @@
 @media(max-width:600px){
     .search-bar{
         margin: auto; 
-        height:35px;     
+        height:35px;   
+       
     }
 
     .search-bar--mobile-nav{
@@ -64,9 +75,17 @@
     .search-bar__input{
         padding-left:28px; 
     }
+
+
     
     .search-bar__input--mobile-nav{
         visibility:hidden;
+       
+    }
+
+    .search-bar__input--mobile-nav:focus{
+        -webkit-box-shadow: 1px 1px 5px 1px #8a8a8a; 
+        box-shadow: 1px 1px 5px 1px #8a8a8a;
     }
 
     .search-bar__search-icon--mobile-nav{
