Refactored the code

--- a/src/App.css
+++ b/src/App.css
@@ -22,13 +22,19 @@
   }
   
   .app {
-    height: 100vh;
+    min-height:100vh;
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
   }
 
   .app__wrapper{
+    width:100%;
     max-width: 1200px;
+    height:100%;
     margin: 0 auto;
     padding: 20px;
+    padding-bottom:0;
   }
   
   a{
