--- a/src/components/Comment/comment.css
+++ b/src/components/Comment/comment.css
@@ -2,7 +2,6 @@
     background-color: rgb(238, 238, 238);
     border-radius: 10px;
     padding:15px;
-  
     max-width:600px;
     width:100%;
     -webkit-box-shadow: 1px 1px 5px 1px #d4d4d4; 
@@ -11,15 +10,12 @@
     margin-bottom:25px;
 }
 
-.comment__wrapper{
-    width:80%;
-}
-
 .comment__email {
     margin-bottom: 10px;
     color: rgb(0, 0, 0);
     font-size: 18px;
     font-weight: 700;
+    word-wrap: break-word;
 }
 
 .comment__body{
@@ -28,9 +24,9 @@
 
 .comment__options{
     display:flex;
-align-items: center;
-margin-top:20px;
-height:30px;
+    align-items: center;
+    margin-top:20px;
+    height:30px;
 }
 
 .comment__option{
@@ -41,18 +37,6 @@ height:30px;
     margin-left:5px;
 }
 
-.comment__option-label{
-    color: rgb(14, 111, 221)
-}
 
-
-.comment__like-icon{
-    width:20px;
-    margin-left:5px;
-}
-
-.comment__option:hover .comment__option-label{
-    text-decoration: underline;
-}
 
 
