--- a/src/components/Container/container.css
+++ b/src/components/Container/container.css
@@ -1,5 +1,17 @@
 .container{
     display:flex;
-    flex-wrap: wrap;
     justify-content: center;
+}
+
+.container--wrap{
+    flex-wrap: wrap;
+}
+
+.container--column{
+    flex-direction: column;
+}
+
+.container--base{
+    display:block;
+    justify-content: none;
 }
