--- a/src/components/Loader/loader.css
+++ b/src/components/Loader/loader.css
@@ -1,26 +1,22 @@
-.loader{
-  
-    background-color: red;
-}
 
-.lds-ripple {
+.loader {
     display: block;
     position: relative;
     width: 80px;
     height: 80px;
     margin: 0 auto;
   }
-  .lds-ripple div {
+  .loader__inner {
     position: absolute;
     border: 4px solid rgb(14, 111, 221);
     opacity: 1;
     border-radius: 50%;
-    animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+    animation: ripples 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
   }
-  .lds-ripple div:nth-child(2) {
+  .loader__inner--delay {
     animation-delay: -0.5s;
   }
-  @keyframes lds-ripple {
+  @keyframes ripples {
     0% {
       top: 36px;
       left: 36px;
