--- a/src/components/PostSneakPeek/postSneakPeek.module.css
+++ b/src/components/PostSneakPeek/postSneakPeek.module.css
@@ -1,4 +1,4 @@
-.post-sneak-peek{
+.postSneakPeek{
     margin: 15px;
     width: 100%;
     max-width: 260px;
@@ -13,13 +13,13 @@
     min-height:100%;
 }
 
-.post-sneak-peek__title{
+.postSneakPeek__title{
     text-align: center;
     font-size:2.1em;
     margin-bottom:20px;
 }
 
-.post-sneak-peek__link{
+.postSneakPeek__link{
     text-align: center;
     margin-bottom:13px;
     font-size:1.5em;
@@ -30,15 +30,15 @@
     
 }
 
-.post-sneak-peek__link:hover{
+.postSneakPeek__link:hover{
    text-decoration: underline; 
 }
 
-.post-sneak-peek__img{
+.postSneakPeek__img{
     width:100%;
 }
 
-.post-sneak-peek__stats{
+.postSneakPeek__stats{
    margin-top:auto;
    display:flex;
    justify-content: center;
@@ -46,24 +46,14 @@
    flex-wrap: wrap;
 }
 
-.post-sneak-peek__stat{
+.postSneakPeek__iconContainer{
     display:flex;
     justify-content: center;
     align-items: center;
     font-size:1.5em;
 }
 
-.post-sneak-peek__stat:last-of-type{
-    margin-left:10px;
-}
-.post-sneak-peek__icon-container{
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    font-size:1.5em;
-}
-
-.post-sneak-peek__icon-container--attached{
+.postSneakPeek__iconContainer--attached{
     width:auto;
     position:absolute;
     right:-5px;
