--- a/src/components/Post/post.module.css
+++ b/src/components/Post/post.module.css
@@ -1,4 +1,6 @@
-.post{}
+.post{
+    margin-bottom: 80px;
+}
 
 .post__imgContainer{
     margin-bottom:20px;
@@ -16,11 +18,21 @@
     margin-bottom: 40px;
 }
 
+.post__headline{
+margin-top:40px;
+margin-bottom:20px;
+margin-left:20px
+}
+
+.post__paragraph{
+line-height:2
+}
+
 .post__iconContainer{
     display:flex;
     align-items: center;
     justify-content: center;
-    margin-top:20px;
+    margin-top:40px;
     cursor:pointer;
 }
 
