--- a/src/components/Headline/headline.module.css
+++ b/src/components/Headline/headline.module.css
@@ -4,7 +4,7 @@
     margin-bottom: 30px;
 }
 
-.headline--xl{
+.headline--big{
     font-size:30px;
-    margin-bottom: 70px;
+    margin-bottom: 40px;
 }
