--- a/src/components/PostSneakPeek/postSneakPeek.module.css
+++ b/src/components/PostSneakPeek/postSneakPeek.module.css
@@ -21,12 +21,12 @@
 
 .postSneakPeek__link{
     text-align: center;
-    margin-bottom:13px;
-    font-size:1.5em;
+    margin-bottom:28px; 
+    margin-top:13px; 
     color: rgb(14, 111, 221);
     display:block;
     width:100%;
-    font-size:15px;
+    font-size:18px;
     
 }
 
