--- a/src/components/QuantityChanger/quantityChanger.module.css
+++ b/src/components/QuantityChanger/quantityChanger.module.css
@@ -1,7 +1,7 @@
 .quantityChanger{
     margin: 30px auto;
     width:100%;
-    max-width:300px;
+    max-width:360px;
 }
 
 .quantityChanger__info{
@@ -10,6 +10,7 @@
 }
 
 .quantityChanger__btnContainer{
+    margin-top:25px;
     display:flex;
     justify-content: space-evenly;
     align-items:center;
@@ -20,9 +21,10 @@
 .quantityChanger__btn{
     margin: auto 10px;
     margin-bottom:15px;
-    width:130px;
+    font-size:15px;
+    width:150px;
     border-radius: 5px;
-    padding:10px;
+    padding:15px;
     border:0;
     background-color: rgb(14, 111, 221);
     -webkit-box-shadow: 1px 1px 5px 1px #d4d4d4; 
