--- a/src/components/SearchBar/searchBar.module.css
+++ b/src/components/SearchBar/searchBar.module.css
@@ -1,102 +1,105 @@
 .searchBar{
-   position:relative;
-   height:33px;
-   width:100%;
-   max-width:350px;
-   -webkit-box-shadow: 1px 1px 5px 1px #d4d4d4; 
-   box-shadow: 1px 1px 5px 1px #d4d4d4;
-    border-radius:5px;
-    transition: .5s;
-}
-
-.searchBar--nav{
-    -webkit-box-shadow: none;
-    box-shadow: none;
-}
-
-.searchBar--small{
-    max-width: 250px; 
-}
-
-.searchBar__input{
-    height:100%;
+    position:relative;
+    height:45px;
     width:100%;
-    padding-left:25px;
-    border:0;
-    border-radius:5px;   
-}
-
-.searchBar__input:focus{
-    -webkit-box-shadow: 1px 1px 5px 1px #b4b4b4; 
-    box-shadow: 1px 1px 5px 1px #b4b4b4; 
-}
-
-.searchBar__input--nav:focus{
-    -webkit-box-shadow: 1px 1px 5px 1px rgb(140, 193, 253);
-    box-shadow: 1px 1px 5px 1px  rgb(140, 193, 253);
-   
-}
-
-.searchBar__searchIcon{
-    position: absolute;
-    left:5px;
-    top:50%;
-    width:16px;
-    transform: translateY(-50%);
-    cursor:pointer;
-}
-
-.searchBar__deleteIcon{
-    position: absolute;
-    right:5px;
-    top:50%;
-    width:16px;
-    transform: translateY(-50%);
-    cursor: pointer;
-}
-
-
-@media(max-width:600px){
-    .searchBar{
-        margin: auto; 
-        height:35px;    
-    }
-
-    .searchBar--mobileNav{
-        width:20px;
-        -webkit-box-shadow: none;
-        box-shadow: none;
-    }
-
-    .searchBar__input{
-        padding-left:28px; 
-    }
-
-    .searchBar__input--mobileNav{
-        visibility:hidden;
-       
-    }
-
-    .searchBar__input--mobileNav:focus{
-        -webkit-box-shadow: 1px 1px 5px 1px #8a8a8a; 
-        box-shadow: 1px 1px 5px 1px #8a8a8a;
-    }
-
-    .searchBar__searchIcon--mobileNav{
-        width:30px;
-        left:0;
-        transition:.5s;
-    }
-
-    .searchBar__searchIcon--mobileActive{
-        width:18px;
-        left:5px;
-    }
+    max-width:350px;
+    -webkit-box-shadow: 1px 1px 5px 1px #d4d4d4; 
+    box-shadow: 1px 1px 5px 1px #d4d4d4;
+     border-radius:5px;
+     transition: .5s;
+ }
+ 
+ .searchBar--nav{
+     -webkit-box-shadow: none;
+     box-shadow: none;
+     height:37px;
+ }
+ 
+ .searchBar--small{
+     max-width: 280px; 
+ }
+ 
+ .searchBar__input{
+     height:100%;
+     width:100%;
+     padding-left:35px;
+     border:0;
+     border-radius:5px;   
+     font-size:15px;
+ }
+ 
+ .searchBar__input:focus{
+     -webkit-box-shadow: 1px 1px 5px 1px #b4b4b4; 
+     box-shadow: 1px 1px 5px 1px #b4b4b4; 
+ }
+ 
+ .searchBar__input--nav:focus{
+     -webkit-box-shadow: 1px 1px 5px 1px rgb(140, 193, 253);
+     box-shadow: 1px 1px 5px 1px  rgb(140, 193, 253);
     
-    .searchBar--mobileActive{
-        -webkit-box-shadow: 1px 1px 5px 1px #d4d4d4; 
-        box-shadow: 1px 1px 5px 1px #d4d4d4;
-        width:100%;
-    }
-}
-
+ }
+ 
+ .searchBar__searchIcon{
+     position: absolute;
+     left:9px;
+     top:50%;
+     width:20px;
+     transform: translateY(-50%);
+     cursor:pointer;
+ }
+ 
+ .searchBar__deleteIcon{
+     position: absolute;
+     right:5px;
+     top:50%;
+     width:20px;
+     transform: translateY(-50%);
+     cursor: pointer;
+ }
+ 
+ 
+ @media(max-width:600px){
+     .searchBar{
+         margin: auto; 
+         height:45px;    
+     }
+ 
+     .searchBar--mobileNav{
+         width:20px;
+         -webkit-box-shadow: none;
+         box-shadow: none;
+     }
+ 
+     .searchBar__input{
+         padding-left:38px; 
+      
+     }
+ 
+     .searchBar__input--mobileNav{
+         visibility:hidden;
+     }
+ 
+     .searchBar__input--mobileNav:focus{
+         -webkit-box-shadow: 1px 1px 5px 1px #8a8a8a; 
+         box-shadow: 1px 1px 5px 1px #8a8a8a;
+     }
+ 
+     .searchBar__searchIcon--mobileNav{
+         width:30px;
+         left:0;
+         transition:.5s;
+     }
+ 
+     .searchBar__searchIcon--mobileActive{
+         width:25px;
+         left:7px;
+     }
+     
+     .searchBar--mobileActive{
+         -webkit-box-shadow: 1px 1px 5px 1px #d4d4d4; 
+         box-shadow: 1px 1px 5px 1px #d4d4d4;
+         width:100%;
+     }
+ }
+ 
+ 
