--- a/src/components/Select/select.module.css
+++ b/src/components/Select/select.module.css
@@ -5,10 +5,11 @@
     border-radius:5px;
     margin-left: 10px;
     padding: 0 10px;
-    height:33px;
+    height:45px;
     max-width:100%;
-    width:250px;
+    width:280px;
     cursor:pointer;
+    font-size:15px;
 }
 
 .select:focus{
@@ -20,5 +21,6 @@
     .select{
         margin-left: 0;
         margin-top:10px;
+       
     }
 }
