--- a/src/components/Line/line.module.css
+++ b/src/components/Line/line.module.css
@@ -2,6 +2,6 @@
     width:90%;
     height:1px;
     margin: 40px auto;
-    background-color:rgb(206, 206, 206);
+    background-color:var(--line-color);
     border-radius: 10px;
 }
