--- a/src/components/Comment/comment.module.css
+++ b/src/components/Comment/comment.module.css
@@ -4,22 +4,22 @@
     margin: 0 auto;
     margin-bottom:25px;
     padding:15px;
-    background-color: rgb(238, 238, 238);
-    -webkit-box-shadow: 1px 1px 5px 1px #d4d4d4; 
-    box-shadow: 1px 1px 5px 1px #d4d4d4;
+    background-color: var(--comment-bg-color);
+    -webkit-box-shadow: 1px 1px 5px 1px var(--box-shadow-color); 
+    box-shadow: 1px 1px 5px 1px var(--box-shadow-color);
     border-radius: 10px;
 }
 
 .comment__email {
     margin-bottom: 10px;
-    color: rgb(0, 0, 0);
+    color: var(--comment-email-font-color);
     font-size: 18px;
     font-weight: 700;
     word-wrap: break-word;
 }
 
 .comment__body{
-    color: rgb(61, 61, 61);
+    color: var(--comment-body-font-color);
     font-size:15px;
     line-height: 1.5;
 }
