--- a/src/components/Footer/footer.module.css
+++ b/src/components/Footer/footer.module.css
@@ -1,7 +1,7 @@
 .footer{
-    background-color: rgb(14, 111, 221);;
-    -webkit-box-shadow: 5px 5px 5px 5px #dadada; 
-    box-shadow: 5px 5px 5px 5px #cccccc;
+    background-color: var(--blue-color);
+    -webkit-box-shadow: 5px 5px 5px 5px var(--box-shadow-color);
+    box-shadow: 5px 5px 5px 5px var(--box-shadow-color);
 }
 
 .footer__content{
@@ -13,5 +13,5 @@
     height:55px;
     margin: 0 auto;
     padding:0 20px;
-    color: #fff;  
+    color: rgb(255,255,255);
 }
