--- a/src/components/PostSneakPeek/postSneakPeek.module.css
+++ b/src/components/PostSneakPeek/postSneakPeek.module.css
@@ -9,8 +9,8 @@
     padding:10px;
     font-size: 10px;
     border-radius: 5px;
-    -webkit-box-shadow: 1px 1px 5px 1px #dadada; 
-    box-shadow: 1px 1px 5px 1px #dadada; 
+    -webkit-box-shadow: 1px 1px 5px 1px var(--box-shadow-color); 
+    box-shadow: 1px 1px 5px 1px var(--box-shadow-color); 
 }
 
 .postSneakPeek__title{
@@ -26,7 +26,7 @@
     margin-top:13px;
     font-size:18px;
     text-align: center;
-    color: rgb(14, 111, 221);
+    color: var(--link-color);
 }
 
 .postSneakPeek__link:hover{
@@ -58,9 +58,9 @@
     top:-20px;
     width:auto;
     padding:5px;
-    background-color: white;
-    -webkit-box-shadow: 1px 1px 5px 1px #dadada; 
-    box-shadow: 1px 1px 5px 1px #dadada;
+    background-color: rgb(255, 255, 255);
+    -webkit-box-shadow: 1px 1px 5px 1px var(--box-shadow-color); 
+    box-shadow: 1px 1px 5px 1px var(--box-shadow-color);
     border-radius:5px;
     font-size:14px;
 }
